# zaia

./: Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
benches/: big.lua  gc.rs  parse.rs
docs/internal/: bytecode.md  cst-ast.md  hir.md  index.md  ir.md  lir.md  memory-management.md  pipeline.md  value-representation.md
src/: error.rs  intern.rs  lib.rs  syntax.rs  syntax_tree.rs  utf8.rs  util.rs
src/engine/: error.rs  gc.rs  marker.rs  mod.rs  object.rs  scope.rs  util.rs  value.rs  vm.rs
src/engine/gc/: broom.rs  handle.rs  heuristics.rs  mod.rs  set.rs  trace.rs
src/engine/gc2/: mod.rs
src/engine/object/: function.rs  mod.rs  table.rs
src/engine/value/: closure.rs  encoding.rs  function.rs  mod.rs  string.rs  table.rs  userdata.rs
src/engine/vm/: ctx.rs  eval.rs  mod.rs
src/ir/: mod.rs  syntax_tree.rs  token.rs
src/middle/: hir.rs
src/parser/: assign.rs  binding_power.rs  classifiers.rs  control.rs  decl.rs  expr.rs  function.rs  generator.rs  hex_float.rs  item.rs  mod.rs  simple_expr.rs  state.rs  stmt.rs  syntax.rs  table.rs  token.rs
src/parser/machinery/: classifiers.rs  event.rs  kind.rs  marker.rs  mod.rs  sink.rs  span.rs  state.rs  stree.rs
src/parser/rules/: stmt.rs
src/parser/snapshots/: zaia__parser__tests__parse_and_verify_comment.snap  zaia__parser__tests__parse_and_verify_declare.snap  zaia__parser__tests__parse_and_verify_function.snap  zaia__parser__tests__parse_and_verify_if.snap  (+3 more)
src/runtime/: marker.rs  mod.rs  scope.rs  value.rs  vm.rs
test-files/: function.lua  literal.lua  mixed.lua  teal.lua
(+31 files in other folders)
