[package]
name = "zaia"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = "0.12.0"
cstree = "0.11.0"
ariadne = "0.1.5"
hashbrown = { version = "0.12.0", default-features = false, features = ["nightly"] }

[dev-dependencies]
insta = "1.12.0"
paste = "1.0.6"
criterion = "0.3.5"

[profile.bench]
debug = true

[[bench]]
name = "parse"
harness = false
