[package]
name = "zaia"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = "0.12.0"
ariadne = "0.1.5"
hashbrown = { version = "0.12.0", default-features = false, features = ["nightly"] }
lasso       = { version = "0.6.0", features = ["inline-more", "multi-threaded"] }
text-size   = "1.1.0"
fxhash      = "0.2.1"
parking_lot = "0.12.0"
triomphe = "0.1.5"

[dev-dependencies]
insta = "1.12.0"
paste = "1.0.6"
criterion = "0.3.5"

[profile.bench]
debug = true

[[bench]]
name = "parse"
harness = false
